@@ -16,6 +16,13 @@ class Point:
     def __add__(self, other):
         return Point(self.x + other.x, self.y + other.y)
 
+    def __sub__(self, other):
+        return Point(self.x - other.x, self.y - other.y)
+
+    def __mul__(self, scalar):
+        """multiply with a given scalar"""
+        return Point(self.x * scalar, self.y * scalar)
+
     def __floordiv__(self, scalar):
         """divide by scalar factor, forcing to integer coordinates"""
         return Point(self.x // scalar, self.y // scalar)
