@@ -44,6 +44,7 @@ public:
     std::string mouse_initiate_resize(Client* client, const std::vector<std::string> &cmd);
     std::string mouse_initiate_resize(Client* client, const ResizeAction& resize);
     std::string mouse_call_command(Client* client, const std::vector<std::string> &cmd);
+    ResizeAction resizeAction();
 
 private:
     //! start dragging for the specified client (possibly up to some arguments), and return a error message
@@ -67,7 +68,7 @@ private:
     //! manually (forward-)declare MouseDragHandler::Constructor as MDC here:
     typedef std::function<std::shared_ptr<MouseDragHandler>(MonitorManager*, Client*)> MDC;
     //! start a the drag, and if it does not work out, return an error message
-    std::string mouse_initiate_drag(Client* client, const MDC& createHandler);
+    std::string mouse_initiate_drag(Client* client, const MDC& createHandler, ResizeAction resize);
 
     std::map<std::string, MouseFunction> mouseFunctions_;
     std::shared_ptr<MouseDragHandler> dragHandler_;
